Update custom-style.scss - Fix blurry GIFs, again

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -95,7 +95,7 @@ body {
         padding-inline-start: 2em;
     }
 
-    .markdown-preview-view img, .markdown-rendered img {
+    .community-item-screenshot, .markdown-preview-view img, .markdown-rendered img {
         image-rendering: auto !important;
     }
     
